2010-05-07  Dan Nicolaescu  <dann@ics.uci.edu>

	Define START_FILES and LIB_STANDARD using autoconf.
	* configure.in (START_FILES, LIB_STANDARD): New definitions, moved
	here from src/s/*.h.
	(HAVE_CRTIN): Remove, inline logic in the netbsd
	START_FILES/LIB_STANDARD computation.

2010-05-06  Glenn Morris  <rgm@gnu.org>

	* configure.in (AC_PROG_LN_S): Remove test, nothing uses @LN_S@.

	* Makefile.in (CPP, C_SWITCH_SYSTEM, ALLOCA, LN_S, C_SWITCH_X_SITE)
	(LD_SWITCH_X_SITE): Remove unused variables.

2010-05-04  Glenn Morris  <rgm@gnu.org>

	* configure.in (LD_SWITCH_X_SITE_AUX): Use AC_SUBST only, not AC_DEFINE
	as well.
	(LD_SWITCH_X_SITE_AUX_RPATH): New output variable.

	* configure.in (LD_SWITCH_SYSTEM_TEMACS): New output variable.

	* configure.in (C_SWITCH_MACHINE, C_SWITCH_SYSTEM): New output
	variables, replacing c_switch_machine, c_switch_system.
	* Makefile.in (C_SWITCH_SYSTEM): Use @C_SWITCH_SYSTEM@ rather than
	@c_switch_system@.

2010-05-03  Glenn Morris  <rgm@gnu.org>

	* configure.in (LIBXT_OTHER, LIBX_OTHER): New output variables.

	* make-dist: There are no more src/m/*.inp files.

2010-05-01  Dan Nicolaescu  <dann@ics.uci.edu>

	* configure.in (LD_SWITCH_MACHINE, ld_switch_machine): Remove, unused.
	(ac_link): Do not use ld_switch_machine.

2010-05-01  Glenn Morris  <rgm@gnu.org>

	* configure.in (OTHER_OBJ): Remove.
	(PRE_ALLOC_OBJ, POST_ALLOC_OBJ): New output variables.

2010-04-30  Glenn Morris  <rgm@gnu.org>

	* configure.in (OTHER_OBJ): Always include vm-limit.o on Cygwin.
	Elsewhere, maybe include it.

	* configure.in (TOOLKIT_LIBW) [HAVE_GTK]: Set to $GTK_LIBS.
	(OLDXMENU, LIBXMENU): New output variables.

	* configure.in (OTHER_OBJ): New output variable.

2010-04-28  Glenn Morris  <rgm@gnu.org>

	* configure.in (CYGWIN_OBJ): New output variable.

	* configure.in (GPM_MOUSE_SUPPORT): New output variable.

	* configure.in (FONT_OBJ): New output variable.

	* configure.in (LIBXMU): New output variable.
