@@ -215,7 +215,6 @@ IS_ANY_SEP
 IS_DIRECTORY_SEP
 KERNEL_FILE
 LDAV_SYMBOL
-LD_SWITCH_SYSTEM
 LIBS_SYSTEM
 LIBS_TERMCAP
 LIBXMU
